fixed flex-wrap

--- a/modules/_layout.scss
+++ b/modules/_layout.scss
@@ -225,7 +225,7 @@ $map-reversed: ();
 
 .flex-wrap {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .no-min-width {
